# qter

./: .envrc  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE_DRAFT.md  Cargo.toml  README.md  TODO.md  flake.nix  main.py  output.txt  p1.g  p1o.g  p2.g  programs.qat  rust-toolchain.toml  shell.nix
.github/workflows/: deploy.yml  typst.yml
exampe-programs/: multiply.c
example-programs/: multiply.c  programs.qat
media/: presentation.typ
media/docs/: book.typ  introduction.typ
media/paper/: bib.yaml  paper.typ
robot-hardware/: frame.FCStd
sage-scripts/: entropy.ipynb  experimentation.ipynb  puzzle_geometry.ipynb
src/: Cargo.toml  Cross.toml  clippy.toml  main.rs
src/.config/: nextest.toml
src/cli/: Cargo.toml  test.qat
src/cli/src/: demo.rs  main.rs  robot.rs
src/cli/src/demo/: code_viz.rs  cube_viz.rs  interpreter_loop.rs  interpreter_plugin.rs  io_viz.rs  mod.rs
src/compiler/: Cargo.toml  qat.pest
src/compiler/src/: builtin_macros.rs  lib.rs  lua.rs  macro_expansion.rs  optimization.rs  parsing.rs  strip_expanded.rs
src/compiler/src/optimization/: combinators.rs  global.rs  local.rs  mod.rs
src/compiler/tests/average/: average.q  average_transform.qat
src/compiler/tests/fib/: fib.q  fib.qat  fib_flat.qat  fib_optimized.q  fib_transform.qat  fib_transform_optimized.qat
src/compiler/tests/multiply/: multiply.c  multiply.q  multiply.qat  multiply_transform.qat
src/compiler/tests/simple/: simple.q  simple.qat
src/cycle_combination_finder/: Cargo.toml
src/cycle_combination_finder/src/: common_types.py  efficient_combination_structures.py  equivalent_combination_structures.py  lib.rs  optimal_combination_structures.py  optimal_combination_structures_landau.py
src/cycle_combination_solver/: Cargo.toml  build.rs
src/cycle_combination_solver/experimental_GAP/: cycle_combinations.g  reader.g  util.g
src/cycle_combination_solver/src/: canonical_fsm.rs  lib.rs  orbit_puzzle.rs  permutator.rs  pruning.rs  puzzle.rs  puzzle_state_history.rs  solver.rs
src/cycle_combination_solver/src/orbit_puzzle/: slice_orbit_puzzle.rs
src/cycle_combination_solver/src/orbit_puzzle/cube3/: mod.rs
src/cycle_combination_solver/src/orbit_puzzle/cubeN/: avx2.rs  fallback.rs  mod.rs  simd8.rs
src/cycle_combination_solver/src/phase1/: efficient_combination_structures.py  equivalent_combination_structures.py  equivalent_combination_structures.rs  mod.rs  optimal_combination_structures.py  optimal_combination_structures_landau.py  phase1.rs  test_phase1.py
src/cycle_combination_solver/src/phase2/: canonical_fsm.rs  canonical_fsm2.rs  cube.rs  defs.rs  from_ksolve.rs  main.rs  mod.rs  orbit_puzzle.rs  parser.rs  permutator.rs  pruning.rs  pruning_simulation.py  puzzle.rs  puzzle_stack.rs  puzzle_state_history.rs  solver.rs
src/cycle_combination_solver/src/phase2-GAP-experimental/: phase2.g  phase3.g  reader.g  testutil.g
src/cycle_combination_solver/src/phase2/orbit_puzzle/: slice_orbit_puzzle.rs
src/cycle_combination_solver/src/phase2/orbit_puzzle/cube3/: avx2.rs  mod.rs  simd8and16.rs
src/cycle_combination_solver/src/phase2/puzzle/: cube3.rs  orbit_puzzle.rs  simdcube.rs  slice_puzzle.rs
src/cycle_combination_solver/src/phase2/puzzle/cube3/: avx2.rs  mod.rs  simd32.rs  simd32cube3.rs  simd816cube3.rs  simd8and16.rs
src/cycle_combination_solver/src/phase2/puzzle/orbit_puzzle/: mod.rs
src/cycle_combination_solver/src/phase2/puzzle/slice_orbit_puzzle/: mod.rs
src/cycle_combination_solver/src/phase2/puzzle/slice_puzzle/: mod.rs
src/cycle_combination_solver/src/puzzle/: slice_puzzle.rs
src/cycle_combination_solver/src/puzzle/cube3/: avx2.rs  mod.rs  portable.rs  simd8and16.rs
src/cycle_combination_solver/tests/: playground.rs  solver_integration.rs
src/interpreter/: Cargo.toml
src/interpreter/src/: instructions.rs  lib.rs  puzzle_states.rs
src/movecount_coefficient/: Cargo.toml
src/movecount_coefficient/src/: lib.rs
src/movecount_coefficient_calculator/: Cargo.toml
src/movecount_coefficient_calculator/src/: lib.rs
src/phase1/: Cargo.toml
src/phase1/src/: efficient_combination_structures.py  equivalent_combination_structures.py  lib.rs  mod.rs  puzzle_orbit_definitions.py
src/phase2/: Cargo.toml
src/phase2/src/: canonical_fsm.rs  lib.rs  orbit_puzzle.rs  permutator.rs  pruning.rs  puzzle.rs  puzzle_state_history.rs  solver.rs
src/phase2/src/orbit_puzzle/: slice_orbit_puzzle.rs
src/phase2/src/orbit_puzzle/cube3/: mod.rs
src/phase2/src/orbit_puzzle/cubeN/: mod.rs  simd8.rs  simd8and16.rs
src/phase2/src/puzzle/: slice_puzzle.rs
src/phase2/src/puzzle/cube3/: avx2.rs  mod.rs  simd8and16.rs
src/phase2/tests/: playground.rs  solver_integration.rs
src/pog_ans/: Cargo.toml
src/pog_ans/src/: lib.rs
src/puzzle_geometry/: Cargo.toml
src/puzzle_geometry/src/: edge_cloud.rs  knife.rs  ksolve.rs  lib.rs  num.rs  puzzle_geometry.rs  puzzles.rs  shapes.rs
src/qter_core/: Cargo.toml  prelude.qat
src/qter_core/puzzles/: 3x3.txt
src/qter_core/src/: architectures.rs  discrete_math.rs  lib.rs  numbers.rs  phase2_puzzle.rs  puzzle.pest  puzzle_parser.rs  runtime.rs  shared_facelet_detection.rs  span.rs  table_encoding.rs
src/qter_core/src/math/: discrete_math.rs  mod.rs  numbers.rs  schreier_sims.rs  union_find.rs
src/robot/: Cargo.toml  build.rs
src/robot/.zed/: settings.json
src/robot/src/: lib.rs  main.rs  regs.rs  rob_twophase.rs  robot_config.toml  uart.rs  upload.sh
src/robot/src/hardware/: config.rs  mod.rs  motor.rs  uart.rs
src/robot/src/hardware/uart/: crc.rs  regs.rs
src/three-phase-solver/: phase1.py  phase2.g
src/three-phase-solver/phase2/: phase2.g
src/three_phase_solver/: NxNOrbitDefinitions.py  best_lcm_testing.py  common_types.py  phase1.py  puzzle_orbit_definitions.py  scripted_orbit_definitions.py  test_phase1.py
src/three_phase_solver/phase3/: phase3.g
src/visualizer/: Cargo.toml
src/visualizer/src/: interpreter_loop.rs  interpreter_plugin.rs  io_viz.rs  lib.rs
three-phase-optimizer/: output.txt  phase1.py  phase3.g
three-phase-solver/: phase1.py  phase3.g
(+32 files in other folders)
