[package]
name = "qter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-rubik = "0.1.2"

[[bin]]
name = "cli"
path = "cli/src/main.rs"

[lib]
name = "qter_core"
path = "qter_core/src/lib.rs"

[workspace]

members = [
  "qter_core",
  "parser",
  "interpreter",
  "compiler",
  "cli",
]
