[workspace]
resolver = "2"
members = [
  "qter_core",
  "interpreter",
  "compiler",
  "cli",
  "cycle_combination_solver",
  "puzzle_geometry",
  "movecount_coefficient",
  "pog_ans", "phase1",
]

[workspace.lints.clippy]
type_complexity = "allow"
disallowed_types = "deny"

[profile.bench]
debug = true
