[workspace]
resolver = "2"
members = [
  "qter_core",
  "interpreter",
  "compiler",
  "cli",
  "cycle_combination_solver",
  "puzzle_geometry",
  "movecount_coefficient_calculator",
  "pog_ans",
  "cycle_combination_finder",
  "robot",
  "visualizer",
]

[workspace.lints.clippy]
type_complexity = "allow"
disallowed_types = "deny"

[profile.bench]
debug = true
