[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = [ "derive" ] }
color-eyre = "0.6"
itertools = "0.13"
owo-colors = "4.2.0"
qter_core = { path = "../qter_core" }
compiler = { path = "../compiler" }
interpreter = { path = "../interpreter" }
puzzle_geometry = { path = "../puzzle_geometry" }
internment = { version = "0.8", features = [ "arc" ] }
ariadne = "0.5.1"
bevy = { version = "0.16.1", features = [ "wayland", "dynamic_linking" ] }
crossbeam-channel = "0.5.15"
log = "0.4.28"
bevy_simple_text_input = "0.11.1"

[lints]
workspace = true

[[bin]]
name = "qter"
path = "src/main.rs"
