[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
qter_core = { path = "../qter_core" }
internment = { version = "0.8", features = [ "arc" ] }
itertools = "0.13"
mlua = { version = "0.10.2", features = ["lua54", "vendored", "send"] }

[lints]
workspace = true
