[package]
name = "cycle_combination_solver"
version = "0.1.0"
edition = "2021"

[dependencies]
integer-partitions = "0.1.1"
memoize = "0.4.2"
num-traits = "0.2.19"
pareto_front = "1.0.1"
puzzle_geometry = { version = "0.1.0", path = "../puzzle_geometry" }
qter_core = { version = "0.1.0", path = "../qter_core" }
thiserror = "2.0.11"

[build-dependencies]
cfg_aliases = "0.2.1"

[lints]
workspace = true

[features]
avx512vl = []
avx512vbmi = []

[[bin]]
name = "delete_this_later"
path = "src/phase2/main.rs"
