[package]
name = "puzzle_geometry"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
qter_core = { path = "../qter_core" }
phf = { version = "0.11.3", features = ["macros"] }
internment = { version = "0.8", features = ["arc"] }
thiserror = "2.0"
itertools = "0.14"
algebraics = { git = "https://github.com/Xendergo/algebraics" }
