[package]
name = "robot"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
interpreter = { path = "../interpreter" }
qter_core = { path = "../qter_core" }
internment = { version = "0.8", features = [ "arc" ] }
dirs = "6.0.0"
itertools = "0.13"
crossbeam = "0.8.4"
thread-priority = "3.0.0"

[target.aarch64-unknown-linux-gnu.dependencies]
rppal = "0.22.1"

[build-dependencies]
cfg_aliases = "0.2.1"

[lints]
workspace = true
