[package]
name = "visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_simple_text_input = "0.11.1"
interpreter = { path = "../interpreter" }
qter_core = { path = "../qter_core" }
crossbeam-channel = "0.5.15"
chumsky = "0.10.1"
internment = { version = "0.8", features = [ "arc" ] }
compiler = { path = "../compiler" }
itertools = "0.13"

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "wayland",
    # "dynamic_linking",

    # "android-game-activity",
    # "android_shared_stdcxx",
    # "animation",
    # "async_executor",
    # "bevy_asset",
    # "bevy_audio",
    # "bevy_color",
    # "bevy_core_pipeline",
    # "bevy_gilrs",
    # "bevy_gizmos",
    # "bevy_gltf",
    # "bevy_input_focus",
    # "bevy_log",
    # "bevy_mesh_picking_backend",

    # # # "bevy_pbr",
    # # "bevy_picking",
    # # "bevy_render",
    # # "bevy_scene",
    # # "bevy_sprite",

    # "bevy_sprite_picking_backend",
    # "bevy_state",
    # "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "std",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
]

[lints]
workspace = true
